--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Form Validation</title>
 </head>
 <body>
-    
+    <h1>Register for CPTC</h1>
+    <form>
+       <label for="firstName">First Name</label>
+       <input type="text" id="firstName">
+       <span>*</span>
+        <br>
+       <label for="lastName">Last name</label>
+       <input type="text" id="lastName">
+       <span>*</span>
+       <br>
+
+       <button type="button">Register</button>
+    </form>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
